@@ -684,7 +684,9 @@ int32_t SPVM__Sys__Socket__getsockopt(SPVM_ENV* env, SPVM_VALUE* stack) {
 
 int32_t SPVM__Sys__Socket__getsockopt_int(SPVM_ENV* env, SPVM_VALUE* stack) {
   
-  int32_t int32_optval = stack[3].ival;
+  int32_t* int32_optval_ref = stack[3].iref;
+  
+  int32_t int32_optval = *int32_optval_ref;
   
   int int_optval = int32_optval;
   
@@ -697,7 +699,11 @@ int32_t SPVM__Sys__Socket__getsockopt_int(SPVM_ENV* env, SPVM_VALUE* stack) {
   int32_t optlen = sizeof(int);
   stack[4].iref = &optlen;
   
-  return SPVM__Sys__Socket__getsockopt(env, stack);
+  int32_t status = SPVM__Sys__Socket__getsockopt(env, stack);
+  
+  *int32_optval_ref = *(int*)optval;
+  
+  return status;
 }
 
 int32_t SPVM__Sys__Socket__shutdown(SPVM_ENV* env, SPVM_VALUE* stack) {
